<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:fontFamily="@font/latobold"
        android:text="@string/Register"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstname"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="First Name"
        app:boxStrokeColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/latoregular"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastname"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Last Name"
        app:boxStrokeColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/latoregular"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Email"
        app:boxStrokeColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/latoregular"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="Password"
        android:orientation="vertical"
        app:boxStrokeColor="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/latoregular"
            android:inputType="textPassword"
            android:paddingStart="15dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registerbutton"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:backgroundTint="@color/isu_red"
        android:fontFamily="@font/latobold"
        android:text="@string/Register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="100dp"
        android:layout_height="60px"
        android:buttonTint="@color/isu_yellow"
        android:fontFamily="@font/latoregular"
        android:text="Athlete"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="80dp"
        android:layout_height="60px"
        android:buttonTint="@color/isu_yellow"
        android:fontFamily="@font/latoregular"
        android:text="Coach"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkbox2"
        android:layout_width="120dp"
        android:layout_height="60px"
        android:buttonTint="@color/isu_yellow"
        android:fontFamily="@font/latoregular"
        android:text="Manager"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>