<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SignIn">

    <fragment
        android:id="@+id/SignIn"
        android:name="com.example.myexperiments.SignIn"
        android:fontFamily="@font/latobold"
        android:label="@string/first_fragment_label"
...

        <action
            android:id="@+id/action_Register_to_SignIn"
            app:destination="@id/SignIn" />
        <action
            android:id="@+id/action_Register_to_UserProfile"
            app:destination="@id/UserProfile" />
    </fragment>

    <fragment
        android:id="@+id/Dashboard"
        android:name="com.example.myexperiments.Dashboard"
        android:label="@string/third_fragment_label"
...
